--- a/index.html
+++ b/index.html
@@ -28,32 +28,17 @@
     </head>
 
     <body>
-        <nav class="desk_nav" id="toppy">
-            <a href="#" class="logo"><img src="./global/Logo.png"></a>
-            <ul class="links">
-                <a href="#" class="link">Home</a>
+        <nav class="topnav" id="toppy">
+            <a href="./" class="logo"><img src="./global/Logo.png"></a>
+            <div class="links">
+                <a href="./" class="link">Home</a>
                 <a href="./about-us" class="link">About Us</a>
                 <a href="./our-journey/" class="link">Our Journey</a>
                 <a href="./our-work/" class="link">Our Work</a>
                 <a href="./sponsors/" class="link">Sponsors</a>
+                <!-- <a href="./blog/" class="link">Blog</a> -->
                 <a href="./contact-us/" class="link">Contact Us</a>
-            </ul>
-        </nav>
-
-        <nav class="hamburger-nav" id="toppy">
-            <a href="#" class="logo"><img src="./global/Logo.png"></a>
-            <label class="hamburger-menu">
-                <input type="checkbox" />
-            </label>
-            <div class="sidebar">
-            <ul>
-                <li><a href="#" class="link">Home</a></li>
-                <li><a href="./about-us" class="link">About Us</a></li>
-                <li><a href="./our-journey/" class="link">Our Journey</a></li>
-                <li><a href="./our-work/" class="link">Our Work</a></li>
-                <li><a href="./sponsors/" class="link">Sponsors</a></li>
-                <li><a href="./contact-us/" class="link">Contact Us</a></li>
-            </ul>
+            </div>
         </nav>
 
         <section class="banner">
@@ -63,24 +48,21 @@
 
         <section class="info">
             <h1>Who are we?</h1>
-            <hr>
-            <p style="padding-bottom: 0;">We are Team Blitz of Saint Olave's Grammar School, a group of 6 dedicated team members with a burning passion for STEM (Science, Technology, Engineering and Maths) and DT. We all came together, collaborating with each other with our own various different skillsets and thinking. We thoroughly enjoy the hands-on experience the F1 in Schools club provides us and the teamwork & collaboration skills we have developed on our journey, helping us get to where we are today! We participated in the 2023 Regionals at London North, entering as an ENTRY class team and came home with 2 awards & coming 2nd in the entry class! We are now working towards the Development class and hope to continue our success!</p>
-            <a href="./about-us/">Learn more...</a>
+            <p style="padding-bottom: 0;">We are Team Blitz of Saint Olave's Grammar School, a group of 5 dedicated team members with a burning passion for STEM (Science, Technology, Engineering and Maths) and DT. We all came together, collaborating with each other with our own various different skillsets and thinking. We thoroughly enjoy the hands-on experience the F1 in Schools club provides us and the teamwork & collaboration skills we have developed on our journey, helping us get to where we are today! We participated in the 2023 Regionals at London North, entering as an ENTRY class team and came home with 2 awards & coming 2nd in the entry class! We are now working towards the Development class and hope to continue our success!</p>
+            <a href="./about-us/">Learn more..</a>
             
             <h1>What is F1 in Schools?</h1>
-            <hr>
             <p style="padding-bottom: 0;">F1 in Schools is a fun STEM-based activity with the goal of introducing students to STEM subjects in an engaging way, using the theme of F1 to encourage students to compete. Students create a miniature F1 car with F1-style features to maximise aerodynamics, thinking through aesthetics, manufacturing, sketches and designing on CAD, designing a portfolio to document their journey and even developing a brand to display at the competition and raise funds for getting the best resources possible!</p>
             <a href="https://www.f1inschools.co.uk/about.html" target="_blank">Learn more..</a>
             
             <h1>Recent News</h1>
-            <hr>
             <!-- <a href="./blog/" style="padding-bottom: 20px; display: inline-block; width: 100%">See our blog..</a> -->
             <div class="article">
                 <div class="content">
                     <h2>Success at London South Regionals!</h2>
                     <p>7th January, 2025</p>
-                    <p>Canterbury Christ Church University</p>
-                    <p>We participated in the London South Regional Finals, coming 2nd in development class, winning 4 awards and progressing to the National Finals!</p>
+                    <p>Canterbury Christ Church University, Canterbury</p>
+                    <p>We participated in the London South Regional Finals, coming 2nd in the development class, winning 4 awards and progressing to the National Finals!</p>
                     <!-- <a href="./blog/9">Continue reading..</a> -->
                 </div>
             </div>
@@ -96,7 +78,6 @@
             </div>
 
             <h1>Our Social Media</h1>
-            <hr>
             <h2 style="padding-top: 0">Twitter</h2>
             <a href="https://twitter.com/team_blitz8" class="chip" target="_blank"><i class="fa fa-twitter"></i>Follow us on Twitter</a>
             <a class="twitter-timeline" data-lang="en" data-width="1200" data-height="520" data-theme="dark" href="https://twitter.com/team_blitz8?ref_src=twsrc%5Etfw" target="_blank">Yash has no life</a>
