feat: new sponsor

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" type="text/css" href="../global/styling.css">
         <link rel="stylesheet" type="text/css" href="./styling.css">
-        <link rel="icon" type="image/x-icon" href="../global/Logo.png">
+        <link rel="icon" type="image/x-icon" href="../global/fav.png">
 
         <meta charset="UTF-8">
         <meta name="author" content="Team Blitz">
@@ -76,6 +76,7 @@
         <footer>
             <div id="sponsors">
                 <img src="../sponsors/silk.jpg">
+                <img src="../sponsors/fernweh.png">
             </div>
 
             <div class="footnav">
