--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Team Blitz | Home</title>
 
         <link rel="stylesheet" type="text/css" href="./global/styling.css">
-        <link rel="icon" type="image/x-icon" href="./global/Logo.png">
+        <link rel="icon" type="image/x-icon" href="./global/fav.png">
 
         <meta charset="UTF-8">
         <meta name="author" content="Team Blitz">
@@ -85,13 +85,14 @@
             <a href="https://www.instagram.com/team_blitz8" class="chip"><i class="fa fa-instagram" target="_blank"></i>Follow us on Instagram</a>
             <figure class="instagram-feed" data-behold-id="9KkC8tX1PVg8O4gmiCEr"></figure>
             <h2 class="tik">TikTok</h2>
-            <a class="tik" href="https://tiktok.com/@team_blitz8" class="chip"><i class="fab fa-tiktok" target="_blank"></i>Follow us on TikTok</a>
+            <a href="https://tiktok.com/@team_blitz8" class="chip tik"><i class="fab fa-tiktok" target="_blank"></i>Follow us on TikTok</a>
             <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
         </section>
 
         <footer>
             <div id="sponsors">
                 <img src="./sponsors/silk.jpg">
+                <img src="./sponsors/fernweh.png">
             </div>
 
             <div class="footnav">
