--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" type="text/css" href="../global/styling.css">
         <link rel="stylesheet" type="text/css" href="./styling.css">
-        <link rel="icon" type="image/x-icon" href="../global/Logo.png">
+        <link rel="icon" type="image/x-icon" href="../global/fav.png">
 
         <meta charset="UTF-8">
         <meta name="author" content="Team Blitz">
@@ -46,8 +46,7 @@
                 <h2>Silk Route Legal - Platinum Sponsor</h2>
                 <div class="contain">
                     <pre>Silk Route Legal is our first ever major sponsor.
-They are a family business specialising in legal services. They provide and offer professional legal services to UK and international clients.
-They guide clients to growth and success through their expert legal advice.
+They are a family business specialising in legal services to UK/international clients.
 They are based in Holborn, London.
 "The law firm that goes the extra mile"</pre>
                     <img class="right" src="silk.jpg">
@@ -56,12 +55,21 @@ They are based in Holborn, London.
             <div class="container" style="border: 10px solid #f8ac29;padding:5px 25px;">
                 <h2>Crossfields Consultants - Supporter</h2>
                 <div class="contain">
-                    <pre>Crossfields Consultants are another family business who opted for our lowest but with the most value sponsorship package, the SUPPORTER tier.
+                    <pre>Crossfields Consultants are another family business who opted for our most value, the SUPPORTER tier.
 They were our first sponsor.
-They offer information technology solutions such as website design.
-Their products are simple yet scalable, making it perfect for any clients, no matter their size.
+They offer simple/scalable information technology solutions such as website design.
 They are located in Bromley, London near our school.</pre>
                     <img class="right" src="crossfields.png">
+                </div>
+            </div>
+            <div class="container" style="border: 10px solid #f8ac29;padding:5px 25px;">
+                <h2>Fernweh Travels - Platinum Sponsor</h2>
+                <div class="contain">
+                    <pre>Fernweh Travels are another family business who opted for our highest tier: the PLATINUM tier.
+They joined us during our Nationals campaign.
+They are a family business who offer ATOL-protected cheap travel packages for the whole family.
+They are based in East London.</pre>
+                    <img class="right" src="fernweh.png">
                 </div>
             </div>
         </section>
@@ -69,6 +77,7 @@ They are located in Bromley, London near our school.</pre>
         <footer>
             <div id="sponsors">
                 <img src="./silk.jpg">
+                <img src="./fernweh.png">
             </div>
 
             <div class="footnav">
