--- a/about-us/index.html
+++ b/about-us/index.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" type="text/css" href="../global/styling.css">
         <link rel="stylesheet" type="text/css" href="./styling.css">
-        <link rel="icon" type="image/x-icon" href="../global/Logo.png">
+        <link rel="icon" type="image/x-icon" href="../global/fav.png">
 
         <meta charset="UTF-8">
         <meta name="author" content="Team Blitz">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="second-line">
                     <div class="person" id="josh">
-                        <h1>Josh Abracadabra</h1>
+                        <h1>Josh Abraham</h1>
                         <h2>ENGINEERING/ENTERPRISE TEAM</h2>
                         <h2>Testing Engineer & Finance Manager</h2>
                         <h2 class="join-info">JOINED DEVELOPMENT CLASS</h2>
@@ -158,6 +158,7 @@
         <footer>
             <div id="sponsors">
                 <img src="../sponsors/silk.jpg">
+                <img src="../sponsors/fernweh.png">
             </div>
 
             <div class="footnav">
